2eme/LPO/jdbc_car/src/main/java/org/example/invalidCarException/CarColorException.java
package org.example.invalidCarException;

public class CarColorException extends BusinessException {

    public CarColorException() {
        super("La voiture ne peut pas être rose !!!");
    }

}
